# SeatLock

./: .env.example  .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_nmake.bat  build_seatlock.bat  error_log.txt  full_log.txt  init_log.txt  main_bench.cpp
.github/workflows/: ci-python.yml  ci.yml
backend/: main.py  requirements.txt
frontend/: app.js  index.html  styles.css
include/: AtomicSeatManager.h  ExpiryWorker.h  Seat.h  SeatManager.h  Server.h
protos/: seatlock.proto
src/: AtomicSeatManager.cpp  ExpiryWorker.cpp  SeatManager.cpp  Server.cpp  main.cpp
tests/: test_basic.cpp
